# spotify-discord-bot

./: .gitignore  Cargo.toml
spotify-test/: .gitignore  Cargo.toml
spotify-test/src/: main.rs
src/: main.rs
