[package]
name = "spotify-discord-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = { version = "0.3.0", features = ["gstreamer-backend"] }
tokio = "1.11.0"
serenity = "0.10.9"
songbird = "0.2.0"
